# credit-risk-modelling

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
credit-risk-modelling/: __init__.py  dataset.py  features.py  plots.py
credit-risk-modelling/modeling/: predict.py  train.py
credit_risk_venv/: pyvenv.cfg
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: EDA_credit_risk.ipynb
