[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "credit-risk-modelling"
version = "0.0.1"
description = "Credit Risk Modelling Demo"
authors = [
  { name = "Dhiraj Kumar Choudhary" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["credit-risk-modelling"]
include = ["pyproject.toml", "credit-risk-modelling/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["credit-risk-modelling"]
force-sort-within-sections = true

